# protoc-plugin-examples

./: .gitignore  CMakeLists.txt  FieldTemplate.qml  FormBuilderPage.qml  README.md  json_reader.h  main.cc  main.qml  qml.qrc  qtquickcontrols2.conf
cmake/: all_targets.cmake
examples/: baz-with-invalid-woz-with-unknowns.json  baz-with-invalid-woz.json  foo.json  sample-form-data-1.json  valid-baz with-settings-and-unknowns.json  valid-baz-with-settings.json  valid-baz-without-settings-with-unknowns.json  valid-baz-without-settings.json
examples/basic/: CMakeLists.txt  main.cc
inputs/: Checkbox.qml  ComboBox.qml  List.qml  Radio.qml  SpinBox.qml  TextArea.qml
plugins/: CMakeLists.txt
plugins/basic-insertions/: CMakeLists.txt  generator.cc  generator.h
plugins/basic-options/: CMakeLists.txt  generator.cc  generator.h  helpers.h
plugins/example/: CMakeLists.txt  generator.cc  generator.h
plugins/protoc-gen-defaults/: CMakeLists.txt  generator.cc  generator.h
plugins/protoc-gen-qml-json/: CMakeLists.txt  generator.cc  generator.h  main.cc
protos/: foo.proto  options.proto
protos/api/: bar.proto  baz.proto  foo.proto  kitchen_sink.proto  platform.proto
protos/options/: options.proto  validate.proto
